--- a/express-mysql/Jenkinsfile
+++ b/express-mysql/Jenkinsfile
@@ -70,6 +70,17 @@ pipeline {
             }
           }
       }
-   
+     stage('Build docker-image') {
+        steps {
+          sh "cd ./${PROJECT_ROOT};docker build -t ${REGISTRY}:${BUILD_NUMBER} . "
+        }
+      }
+      stage('Deploy docker-image') {
+        steps {
+          // If the Dockerhub authentication stopped, do it again
+          sh 'docker login'
+          sh "docker push ${REGISTRY}:${BUILD_NUMBER}"
+        }
+      }
   }
 }
